roco-gen/tests/templates/snapshots/generate[controller_file]@task.snap
---
source: roco-gen/tests/templates/task.rs
expression: "fs::read_to_string(task_path.join(\"cleanup.rs\")).expect(\"Failed to read generated task file: cleanup.rs\")"
---
use roco_rs::prelude::*;

pub struct Cleanup;
#[async_trait]
impl Task for Cleanup {
    fn task(&self) -> TaskInfo {
        TaskInfo {
            name: "cleanup".to_string(),
            detail: "Task generator".to_string(),
        }
    }
    async fn run(&self, _app_context: &AppContext, _vars: &task::Vars) -> Result<()> {
        println!("Task Cleanup generated");
        Ok(())
    }
}
