roco-gen/tests/templates/snapshots/generate[docker_file_[2]_[false]]@deployment.snap
---
source: roco-gen/tests/templates/deployment.rs
expression: "fs::read_to_string(tree_fs.root.join(\"Dockerfile\")).expect(\"Dockerfile missing\")"
snapshot_kind: text
---
FROM rust:[version]-slim AS builder

WORKDIR /usr/src/

COPY . .

RUN cargo build --release

FROM debian:bookworm-slim

WORKDIR /usr/app

COPY --from=builder /usr/src/404.html 404.html
COPY --from=builder /usr/src/asset asset
COPY --from=builder /usr/src/config config
COPY --from=builder /usr/src/target/release/tester-cli tester-cli

ENTRYPOINT ["/usr/app/tester-cli"]
